With Artjom and Oleg. Fix check boxes, but some buttons are not aligned properly.

--- a/client/src/main/resources/css/mainScene.css
+++ b/client/src/main/resources/css/mainScene.css
@@ -8,14 +8,13 @@
     }
 
     .mainSceneButton {
-
         -fx-background-color: -fx-blue;
         -fx-background-radius: 7px;
         -fx-font-size: 36px;
         -fx-text-fill: -fx-white;
         -fx-pref-width: 455.25px;
         -fx-pref-height: 50.25px;
-
+        -fx-padding: 0px 0px 0px 0px;
     }
 
     .mainSceneButton:hover{
